--- a/style/style.css
+++ b/style/style.css
@@ -42,6 +42,22 @@ a:hover {
     font-weight: bold;
 }
 
+footer {
+    background-color: #efefef;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 10px;
+}
+
+footer p {
+    font-weight: 500;
+    font-size: 0.9em;
+}
+
+
 /* Media Queries */
 
 @media screen and (min-width:480px) {
@@ -52,6 +68,16 @@ a:hover {
 
     ul {
         gap: 50px;
+        font-size: 1em;
+    }
+
+    footer {
+        flex-direction: row;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    footer p {
         font-size: 1em;
     }
 
@@ -66,6 +92,10 @@ a:hover {
     ul {
         font-size: 1.10em;
         gap: 75px;
+    }
+
+    footer p {
+        font-size: 1.10em;
     }
 }
 
