--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     padding: 0;
     min-width: 320px;
-    max-width: 1440px;
 }
 
 header {
@@ -40,6 +39,42 @@ a {
 
 a:hover {
     font-weight: bold;
+}
+
+section {
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 100%;
+}
+
+.slider {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding: 0;
+    max-height: 650px;
+}
+
+.slider-inner {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-top: calc(100% / 2);
+}
+
+.slider img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.slider img.active {
+    opacity: 1;
 }
 
 footer {
